src/objects/Account_Addresses__c.object
<CustomObject>
    <description>CORE adopted from ICOM</description>
    <fields>
        <fullName>Account__c</fullName>
        <description>Reference to SalesForce Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alternate Addresses</relationshipLabel>
        <relationshipName>Account_Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <description>Standard address line 1; Utilized to capture alternate addresses in SFDC.</description>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <description>Standard address line 2; Utilized to capture alternate addresses in SFDC.</description>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_3__c</fullName>
        <description>Standard address line 3; Utilized to capture alternate addresses in SFDC.</description>
        <label>Address 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <description>Designates the type of address (billing, shipping, deliver to, etc.); Utilized to capture alternate addresses in SFDC.</description>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deliver To</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>City; Utilized to capture alternate addresses in SFDC.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Country; Utilized to capture alternate addresses in SFDC.</description>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>County where institution resides</description>
        <label>County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataHub_Key__c</fullName>
        <externalId>true</externalId>
        <label>DataHub Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Hub_ID__c</fullName>
        <description>This field stores External System (Data Hub) unique identifier</description>
        <externalId>true</externalId>
        <label>Data Hub ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Account_Number__c</fullName>
        <description>Account Number from ERP system</description>
        <label>ERP Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Address_ID__c</fullName>
        <label>ERP Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP_Address_Status__c</fullName>
        <label>ERP Address Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Contains the Oracle id of the specific address type.</description>
        <inlineHelpText>Contains the Oracle id of the specific address type.</inlineHelpText>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <description>Defines the ERP Source of the Account Address</description>
        <label>Source</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>State/Province; Utilized to capture alternate addresses in SFDC.</description>
        <label>State</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Zip code; Utilized to capture alternate addresses in SFDC.</description>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_url__c</fullName>
        <formula>HYPERLINK( &quot;/&quot;+Id , &quot;Click Here&quot;,&quot;_self&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detail</label>
        <type>Text</type>
    </fields>
    <label>Account Addresses</label>
    <nameField>
        <displayFormat>AcctAddress- {0}</displayFormat>
        <label>Account Addresses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Addresses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>